--- a/final assignment/2_MORO_ANALYSIS.ipynb
+++ b/final assignment/2_MORO_ANALYSIS.ipynb
@@ -11,11 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('test')"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T08:25:32.256974600Z",
+     "start_time": "2023-05-31T08:25:32.251429600Z"
+    }
    }
   }
  ],
