start moro notebook

--- a/final assignment/2_MORO_ANALYSIS.ipynb
+++ b/final assignment/2_MORO_ANALYSIS.ipynb
@@ -10,26 +10,401 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "First, packages are imported."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import networkx as nx\n",
+    "\n",
+    "from ema_workbench import (\n",
+    "    Model,\n",
+    "    Policy,\n",
+    "    ema_logging,\n",
+    "    SequentialEvaluator,\n",
+    "    MultiprocessingEvaluator,\n",
+    ")\n",
+    "from dike_model_function import DikeNetwork  # @UnresolvedImport\n",
+    "from problem_formulation import get_model_for_problem_formulation, sum_over, sum_over_time"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T08:28:23.977587200Z",
+     "start_time": "2023-05-31T08:28:21.016911300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Problem formulation\n",
+    "\n",
+    "    0. Total cost, and casualties\n",
+    "    1. Expected damages, costs, and casualties\n",
+    "    2. expected damages, dike investment costs, rfr costs, evacuation cost, and casualties\n",
+    "    3. costs and casualties disaggregated over dike rings, and room for the river and evacuation costs\n",
+    "    4. Expected damages, dike investment cost and casualties disaggregated over dike rings and room for the river and evacuation costs\n",
+    "    5. disaggregate over time and space\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
+    "\n",
+    "# choose problem formulation number, between 0-5\n",
+    "# each problem formulation has its own list of outcomes\n",
+    "problem_formulation = 0\n",
+    "\n",
+    "dike_model, planning_steps = get_model_for_problem_formulation(problem_formulation)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T08:36:19.553177500Z",
+     "start_time": "2023-05-31T08:36:18.521929Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n"
+      "CategoricalParameter('discount rate 0', [0, 1, 2, 3])\n",
+      "CategoricalParameter('discount rate 1', [0, 1, 2, 3])\n",
+      "CategoricalParameter('discount rate 2', [0, 1, 2, 3])\n",
+      "IntegerParameter('A.0_ID flood wave shape', 0, 132, resolution=None, default=None, variable_name=['A.0_ID flood wave shape'], pff=False)\n",
+      "RealParameter('A.1_Bmax', 30, 350, resolution=None, default=None, variable_name=['A.1_Bmax'], pff=False)\n",
+      "RealParameter('A.1_pfail', 0, 1, resolution=None, default=None, variable_name=['A.1_pfail'], pff=False)\n",
+      "CategoricalParameter('A.1_Brate', [0, 1, 2])\n",
+      "RealParameter('A.2_Bmax', 30, 350, resolution=None, default=None, variable_name=['A.2_Bmax'], pff=False)\n",
+      "RealParameter('A.2_pfail', 0, 1, resolution=None, default=None, variable_name=['A.2_pfail'], pff=False)\n",
+      "CategoricalParameter('A.2_Brate', [0, 1, 2])\n",
+      "RealParameter('A.3_Bmax', 30, 350, resolution=None, default=None, variable_name=['A.3_Bmax'], pff=False)\n",
+      "RealParameter('A.3_pfail', 0, 1, resolution=None, default=None, variable_name=['A.3_pfail'], pff=False)\n",
+      "CategoricalParameter('A.3_Brate', [0, 1, 2])\n",
+      "RealParameter('A.4_Bmax', 30, 350, resolution=None, default=None, variable_name=['A.4_Bmax'], pff=False)\n",
+      "RealParameter('A.4_pfail', 0, 1, resolution=None, default=None, variable_name=['A.4_pfail'], pff=False)\n",
+      "CategoricalParameter('A.4_Brate', [0, 1, 2])\n",
+      "RealParameter('A.5_Bmax', 30, 350, resolution=None, default=None, variable_name=['A.5_Bmax'], pff=False)\n",
+      "RealParameter('A.5_pfail', 0, 1, resolution=None, default=None, variable_name=['A.5_pfail'], pff=False)\n",
+      "CategoricalParameter('A.5_Brate', [0, 1, 2])\n"
      ]
     }
    ],
    "source": [
-    "print('test')"
+    "# Making a list of uncertainties\n",
+    "\n",
+    "import copy\n",
+    "\n",
+    "for unc in dike_model.uncertainties:\n",
+    "    print(repr(unc))\n",
+    "\n",
+    "uncertainties = copy.deepcopy(dike_model.uncertainties)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-31T08:25:32.256974600Z",
-     "start_time": "2023-05-31T08:25:32.251429600Z"
+     "end_time": "2023-05-31T08:36:21.962834700Z",
+     "start_time": "2023-05-31T08:36:21.945494100Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IntegerParameter('0_RfR 0', 0, 1, resolution=None, default=None, variable_name=['0_RfR 0'], pff=False)\n",
+      "IntegerParameter('0_RfR 1', 0, 1, resolution=None, default=None, variable_name=['0_RfR 1'], pff=False)\n",
+      "IntegerParameter('0_RfR 2', 0, 1, resolution=None, default=None, variable_name=['0_RfR 2'], pff=False)\n",
+      "IntegerParameter('1_RfR 0', 0, 1, resolution=None, default=None, variable_name=['1_RfR 0'], pff=False)\n",
+      "IntegerParameter('1_RfR 1', 0, 1, resolution=None, default=None, variable_name=['1_RfR 1'], pff=False)\n",
+      "IntegerParameter('1_RfR 2', 0, 1, resolution=None, default=None, variable_name=['1_RfR 2'], pff=False)\n",
+      "IntegerParameter('2_RfR 0', 0, 1, resolution=None, default=None, variable_name=['2_RfR 0'], pff=False)\n",
+      "IntegerParameter('2_RfR 1', 0, 1, resolution=None, default=None, variable_name=['2_RfR 1'], pff=False)\n",
+      "IntegerParameter('2_RfR 2', 0, 1, resolution=None, default=None, variable_name=['2_RfR 2'], pff=False)\n",
+      "IntegerParameter('3_RfR 0', 0, 1, resolution=None, default=None, variable_name=['3_RfR 0'], pff=False)\n",
+      "IntegerParameter('3_RfR 1', 0, 1, resolution=None, default=None, variable_name=['3_RfR 1'], pff=False)\n",
+      "IntegerParameter('3_RfR 2', 0, 1, resolution=None, default=None, variable_name=['3_RfR 2'], pff=False)\n",
+      "IntegerParameter('4_RfR 0', 0, 1, resolution=None, default=None, variable_name=['4_RfR 0'], pff=False)\n",
+      "IntegerParameter('4_RfR 1', 0, 1, resolution=None, default=None, variable_name=['4_RfR 1'], pff=False)\n",
+      "IntegerParameter('4_RfR 2', 0, 1, resolution=None, default=None, variable_name=['4_RfR 2'], pff=False)\n",
+      "IntegerParameter('EWS_DaysToThreat', 0, 4, resolution=None, default=None, variable_name=['EWS_DaysToThreat'], pff=False)\n",
+      "IntegerParameter('A.1_DikeIncrease 0', 0, 10, resolution=None, default=None, variable_name=['A.1_DikeIncrease 0'], pff=False)\n",
+      "IntegerParameter('A.1_DikeIncrease 1', 0, 10, resolution=None, default=None, variable_name=['A.1_DikeIncrease 1'], pff=False)\n",
+      "IntegerParameter('A.1_DikeIncrease 2', 0, 10, resolution=None, default=None, variable_name=['A.1_DikeIncrease 2'], pff=False)\n",
+      "IntegerParameter('A.2_DikeIncrease 0', 0, 10, resolution=None, default=None, variable_name=['A.2_DikeIncrease 0'], pff=False)\n",
+      "IntegerParameter('A.2_DikeIncrease 1', 0, 10, resolution=None, default=None, variable_name=['A.2_DikeIncrease 1'], pff=False)\n",
+      "IntegerParameter('A.2_DikeIncrease 2', 0, 10, resolution=None, default=None, variable_name=['A.2_DikeIncrease 2'], pff=False)\n",
+      "IntegerParameter('A.3_DikeIncrease 0', 0, 10, resolution=None, default=None, variable_name=['A.3_DikeIncrease 0'], pff=False)\n",
+      "IntegerParameter('A.3_DikeIncrease 1', 0, 10, resolution=None, default=None, variable_name=['A.3_DikeIncrease 1'], pff=False)\n",
+      "IntegerParameter('A.3_DikeIncrease 2', 0, 10, resolution=None, default=None, variable_name=['A.3_DikeIncrease 2'], pff=False)\n",
+      "IntegerParameter('A.4_DikeIncrease 0', 0, 10, resolution=None, default=None, variable_name=['A.4_DikeIncrease 0'], pff=False)\n",
+      "IntegerParameter('A.4_DikeIncrease 1', 0, 10, resolution=None, default=None, variable_name=['A.4_DikeIncrease 1'], pff=False)\n",
+      "IntegerParameter('A.4_DikeIncrease 2', 0, 10, resolution=None, default=None, variable_name=['A.4_DikeIncrease 2'], pff=False)\n",
+      "IntegerParameter('A.5_DikeIncrease 0', 0, 10, resolution=None, default=None, variable_name=['A.5_DikeIncrease 0'], pff=False)\n",
+      "IntegerParameter('A.5_DikeIncrease 1', 0, 10, resolution=None, default=None, variable_name=['A.5_DikeIncrease 1'], pff=False)\n",
+      "IntegerParameter('A.5_DikeIncrease 2', 0, 10, resolution=None, default=None, variable_name=['A.5_DikeIncrease 2'], pff=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Making a list of policy levers\n",
+    "\n",
+    "for policy in dike_model.levers:\n",
+    "    print(repr(policy))\n",
+    "\n",
+    "levers = copy.deepcopy(dike_model.levers)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T08:37:29.131235600Z",
+     "start_time": "2023-05-31T08:37:29.061256800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ScalarOutcome('All Costs', variable_name=('A.1_Expected Annual Damage', 'A.2_Expected Annual Damage', 'A.3_Expected Annual Damage', 'A.4_Expected Annual Damage', 'A.5_Expected Annual Damage', 'A.1_Dike Investment Costs', 'A.2_Dike Investment Costs', 'A.3_Dike Investment Costs', 'A.4_Dike Investment Costs', 'A.5_Dike Investment Costs', 'RfR Total Costs', 'Expected Evacuation Costs'), function=<function sum_over at 0x0000016190ECE2A0>)\n",
+      "ScalarOutcome('Expected Number of Deaths', variable_name=('A.1_Expected Number of Deaths', 'A.2_Expected Number of Deaths', 'A.3_Expected Number of Deaths', 'A.4_Expected Number of Deaths', 'A.5_Expected Number of Deaths'), function=<function sum_over at 0x0000016190ECE2A0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Making a list of outcomes\n",
+    "\n",
+    "for outcome in dike_model.outcomes:\n",
+    "    print(repr(outcome))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T08:38:06.402337500Z",
+     "start_time": "2023-05-31T08:38:06.366061800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Model run"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started with 12 workers\n",
+      "[MainProcess/INFO] performing 50 scenarios * 4 policies * 1 model(s) = 200 experiments\n",
+      "100%|████████████████████████████████████████| 200/200 [00:26<00:00,  7.62it/s]\n",
+      "[MainProcess/INFO] experiments finished\n",
+      "[MainProcess/INFO] terminating pool\n"
+     ]
+    }
+   ],
+   "source": [
+    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
+    "    results = evaluator.perform_experiments(scenarios=50, policies=4)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T08:40:22.714693600Z",
+     "start_time": "2023-05-31T08:38:59.128180200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "# Saving the simulation runs\n",
+    "experiments, outcomes = results\n",
+    "\n",
+    "outcome_df = pd.DataFrame(outcomes)\n",
+    "experiment_df = pd.DataFrame(experiments)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T08:43:14.363176100Z",
+     "start_time": "2023-05-31T08:43:14.327885300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Eind open exploration"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Wald's minimax criterion, minimizes the maximum risk\n",
+    "Monte-Carlo strategies\n",
+    "Groepje 22"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Policies"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "# defining specific policies\n",
+    "# for example, policy 1 is about extra protection in upper boundary\n",
+    "# policy 2 is about extra protection in lower boundary\n",
+    "# policy 3 is extra protection in random locations"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T09:25:33.956265800Z",
+     "start_time": "2023-05-31T09:25:33.951161300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "def get_do_nothing_dict():\n",
+    "    return {l.name: 0 for l in dike_model.levers}\n",
+    "\n",
+    "\n",
+    "policies = [\n",
+    "    Policy(\n",
+    "        \"policy 1\",\n",
+    "        **dict(\n",
+    "            get_do_nothing_dict(),\n",
+    "            **{\"0_RfR 0\": 1, \"0_RfR 1\": 1, \"0_RfR 2\": 1, \"A.1_DikeIncrease 0\": 5}\n",
+    "        )\n",
+    "    ),\n",
+    "    Policy(\n",
+    "        \"policy 2\",\n",
+    "        **dict(\n",
+    "            get_do_nothing_dict(),\n",
+    "            **{\"4_RfR 0\": 1, \"4_RfR 1\": 1, \"4_RfR 2\": 1, \"A.5_DikeIncrease 0\": 5}\n",
+    "        )\n",
+    "    ),\n",
+    "    Policy(\n",
+    "        \"policy 3\",\n",
+    "        **dict(\n",
+    "            get_do_nothing_dict(),\n",
+    "            **{\"1_RfR 0\": 1, \"2_RfR 1\": 1, \"3_RfR 2\": 1, \"A.3_DikeIncrease 0\": 5}\n",
+    "        )\n",
+    "    ),\n",
+    "]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T09:26:29.221379500Z",
+     "start_time": "2023-05-31T09:26:29.183363300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "# pass the policies list to EMA workbench experiment runs\n",
+    "n_scenarios = 100\n",
+    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
+    "    results = evaluator.perform_experiments(n_scenarios, policies)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T09:27:08.685358900Z",
+     "start_time": "2023-05-31T09:27:08.661535800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "experiments, outcomes = results\n",
+    "\n",
+    "exp = pd.DataFrame(experiments)\n",
+    "out = pd.DataFrame(outcomes)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-31T09:28:19.151262100Z",
+     "start_time": "2023-05-31T09:28:19.131057500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
