--- a/final assignment/2_MORO_ANALYSIS.ipynb
+++ b/final assignment/2_MORO_ANALYSIS.ipynb
@@ -80,6 +80,31 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "odict_keys(['A.1_Expected Annual Damage', 'A.1_Dike Investment Costs', 'A.1_Expected Number of Deaths', 'A.2_Expected Annual Damage', 'A.2_Dike Investment Costs', 'A.2_Expected Number of Deaths', 'A.3_Expected Annual Damage', 'A.3_Dike Investment Costs', 'A.3_Expected Number of Deaths', 'A.4_Expected Annual Damage', 'A.4_Dike Investment Costs', 'A.4_Expected Number of Deaths', 'A.5_Expected Annual Damage', 'A.5_Dike Investment Costs', 'A.5_Expected Number of Deaths', 'RfR Total Costs', 'Expected Evacuation Costs'])"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dike_model, planning_steps = get_model_for_problem_formulation(5)\n",
+    "dike_model.outcomes.keys()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T13:55:47.157786800Z",
+     "start_time": "2023-06-01T13:55:46.800506700Z"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "\n"
