weer stukje verder

--- a/final assignment/2_MORO_ANALYSIS.ipynb
+++ b/final assignment/2_MORO_ANALYSIS.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "#   import packages\n",
@@ -62,25 +62,26 @@
     ")\n",
     "from dike_model_function import DikeNetwork  # @UnresolvedImport\n",
     "from problem_formulation import get_model_for_problem_formulation, sum_over, sum_over_time\n",
-    "from ema_workbench.em_framework.samplers import sample_uncertainties\n"
+    "from ema_workbench.em_framework.samplers import sample_uncertainties\n",
+    "from ema_workbench.em_framework.optimization import ArchiveLogger, EpsilonProgress\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T10:16:48.056563700Z",
-     "start_time": "2023-06-02T10:16:45.714997300Z"
+     "end_time": "2023-06-02T14:09:18.919584100Z",
+     "start_time": "2023-06-02T14:09:18.911387300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
       "text/plain": "odict_keys(['A.1_Expected Annual Damage', 'A.1_Dike Investment Costs', 'A.1_Expected Number of Deaths', 'A.2_Expected Annual Damage', 'A.2_Dike Investment Costs', 'A.2_Expected Number of Deaths', 'A.3_Expected Annual Damage', 'A.3_Dike Investment Costs', 'A.3_Expected Number of Deaths', 'A.4_Expected Annual Damage', 'A.4_Dike Investment Costs', 'A.4_Expected Number of Deaths', 'A.5_Expected Annual Damage', 'A.5_Dike Investment Costs', 'A.5_Expected Number of Deaths', 'RfR Total Costs', 'Expected Evacuation Costs'])"
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,8 +93,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T10:16:48.695102400Z",
-     "start_time": "2023-06-02T10:16:48.057569200Z"
+     "end_time": "2023-06-02T14:29:54.694189600Z",
+     "start_time": "2023-06-02T14:29:54.539856700Z"
     }
    }
   },
@@ -123,6 +124,7 @@
     "# robustness metrics\n",
     "maximize = ScalarOutcome.MAXIMIZE\n",
     "minimize = ScalarOutcome.MINIMIZE\n",
+    "\n",
     "percentile10 = functools.partial(np.percentile, q=10)\n",
     "percentile90 = functools.partial(np.percentile, q=90)\n",
     "\n",
@@ -206,6 +208,31 @@
     "ExecuteTime": {
      "end_time": "2023-06-02T12:17:33.061047800Z",
      "start_time": "2023-06-02T12:17:32.623254100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    robust_1      robust_2      robust_3     robust_4      robust_5\n0   0.085424  1.162808e+08  0.000000e+00  377300000.0      0.000000\n1   0.000000  0.000000e+00  4.027367e+07  256100000.0      0.000000\n2   0.031708  3.990029e+07  2.589276e+07  256100000.0      0.000000\n3   0.004047  3.764773e+06  2.852060e+07  377300000.0      0.000000\n4   0.025341  3.267163e+07  2.503721e+07  377300000.0      0.000000\n5   0.001773  1.614378e+06  2.949518e+07  377300000.0      0.000000\n6   0.001299  1.386082e+07  2.503721e+07  377300000.0   4564.784748\n7   0.000642  6.296517e+06  2.589276e+07  377300000.0   3635.453831\n8   0.000880  7.932825e+05  3.154537e+07  377300000.0      0.000000\n9   0.002390  2.656788e+07  0.000000e+00  377300000.0   6579.793837\n10  0.000324  2.883890e+05  3.262330e+07  377300000.0      0.000000\n11  0.000000  0.000000e+00  3.373806e+07  377300000.0     44.886404\n12  0.003026  2.678151e+07  0.000000e+00  377300000.0   1268.334348\n13  0.000137  3.364069e+05  3.667668e+07  286800000.0    127.611808\n14  0.000000  0.000000e+00  3.590393e+07  377300000.0      0.000000\n15  0.000177  1.364681e+06  2.769255e+07  377300000.0   1914.278410\n16  0.000095  2.387745e+05  3.050305e+07  679700000.0     91.645312\n17  0.005704  5.148972e+06  2.769255e+07  377300000.0      0.000000\n18  0.001475  1.364681e+06  2.769255e+07  461900000.0      0.000000\n19  0.017201  2.126222e+07  2.589276e+07  377300000.0      0.000000\n20  0.000942  2.317017e+06  3.337712e+07  340700000.0  12042.966675\n21  0.000032  2.387745e+05  3.050305e+07  377300000.0   2752.297779\n22  0.002677  1.981044e+07  2.503721e+07  625800000.0   3560.026294\n23  0.006909  5.853519e+07  2.503721e+07  256100000.0   8706.040340\n24  0.004707  4.781138e+06  2.677753e+07  408000000.0      0.000000\n25  0.019597  1.797483e+07  2.677753e+07  256100000.0      0.000000\n26  0.000032  2.387745e+05  3.337712e+07  377300000.0    423.152547\n27  0.003398  8.729404e+06  2.589276e+07  595100000.0    337.711661\n28  0.000383  3.380034e+05  3.667668e+07  256100000.0      0.000000\n29  0.001533  1.351392e+06  3.373806e+07  256100000.0      0.000000\n30  0.000071  5.380723e+05  3.035153e+07  377300000.0    242.480268\n31  0.001702  4.954473e+06  3.337712e+07  286800000.0    423.629399\n32  0.002251  2.101707e+06  2.757823e+07  625800000.0      0.000000\n33  0.000000  0.000000e+00  3.262330e+07  408000000.0      0.000000\n34  0.016736  5.889036e+07  2.503721e+07  256100000.0   1656.429582\n35  0.016367  1.848784e+08  0.000000e+00  256100000.0  10136.801233\n36  0.000654  6.296517e+06  2.589276e+07  595100000.0   2640.705893\n37  0.008218  7.610095e+06  2.677753e+07  377300000.0      0.000000\n38  0.000589  5.380723e+05  2.949518e+07  408000000.0      0.000000\n39  0.000575  3.499283e+06  2.769255e+07  408000000.0    543.937399\n40  0.000810  2.101707e+06  2.757823e+07  377300000.0    928.134987\n41  0.003398  1.023737e+07  2.589276e+07  377300000.0    337.711661\n42  0.005704  5.727839e+06  2.769255e+07  256100000.0      0.000000",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>robust_1</th>\n      <th>robust_2</th>\n      <th>robust_3</th>\n      <th>robust_4</th>\n      <th>robust_5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.085424</td>\n      <td>1.162808e+08</td>\n      <td>0.000000e+00</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.000000</td>\n      <td>0.000000e+00</td>\n      <td>4.027367e+07</td>\n      <td>256100000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.031708</td>\n      <td>3.990029e+07</td>\n      <td>2.589276e+07</td>\n      <td>256100000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.004047</td>\n      <td>3.764773e+06</td>\n      <td>2.852060e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.025341</td>\n      <td>3.267163e+07</td>\n      <td>2.503721e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>0.001773</td>\n      <td>1.614378e+06</td>\n      <td>2.949518e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>0.001299</td>\n      <td>1.386082e+07</td>\n      <td>2.503721e+07</td>\n      <td>377300000.0</td>\n      <td>4564.784748</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>0.000642</td>\n      <td>6.296517e+06</td>\n      <td>2.589276e+07</td>\n      <td>377300000.0</td>\n      <td>3635.453831</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>0.000880</td>\n      <td>7.932825e+05</td>\n      <td>3.154537e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>0.002390</td>\n      <td>2.656788e+07</td>\n      <td>0.000000e+00</td>\n      <td>377300000.0</td>\n      <td>6579.793837</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>0.000324</td>\n      <td>2.883890e+05</td>\n      <td>3.262330e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>0.000000</td>\n      <td>0.000000e+00</td>\n      <td>3.373806e+07</td>\n      <td>377300000.0</td>\n      <td>44.886404</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>0.003026</td>\n      <td>2.678151e+07</td>\n      <td>0.000000e+00</td>\n      <td>377300000.0</td>\n      <td>1268.334348</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>0.000137</td>\n      <td>3.364069e+05</td>\n      <td>3.667668e+07</td>\n      <td>286800000.0</td>\n      <td>127.611808</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>0.000000</td>\n      <td>0.000000e+00</td>\n      <td>3.590393e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>0.000177</td>\n      <td>1.364681e+06</td>\n      <td>2.769255e+07</td>\n      <td>377300000.0</td>\n      <td>1914.278410</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>0.000095</td>\n      <td>2.387745e+05</td>\n      <td>3.050305e+07</td>\n      <td>679700000.0</td>\n      <td>91.645312</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>0.005704</td>\n      <td>5.148972e+06</td>\n      <td>2.769255e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>0.001475</td>\n      <td>1.364681e+06</td>\n      <td>2.769255e+07</td>\n      <td>461900000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>0.017201</td>\n      <td>2.126222e+07</td>\n      <td>2.589276e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>0.000942</td>\n      <td>2.317017e+06</td>\n      <td>3.337712e+07</td>\n      <td>340700000.0</td>\n      <td>12042.966675</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>0.000032</td>\n      <td>2.387745e+05</td>\n      <td>3.050305e+07</td>\n      <td>377300000.0</td>\n      <td>2752.297779</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>0.002677</td>\n      <td>1.981044e+07</td>\n      <td>2.503721e+07</td>\n      <td>625800000.0</td>\n      <td>3560.026294</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>0.006909</td>\n      <td>5.853519e+07</td>\n      <td>2.503721e+07</td>\n      <td>256100000.0</td>\n      <td>8706.040340</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>0.004707</td>\n      <td>4.781138e+06</td>\n      <td>2.677753e+07</td>\n      <td>408000000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>0.019597</td>\n      <td>1.797483e+07</td>\n      <td>2.677753e+07</td>\n      <td>256100000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>0.000032</td>\n      <td>2.387745e+05</td>\n      <td>3.337712e+07</td>\n      <td>377300000.0</td>\n      <td>423.152547</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>0.003398</td>\n      <td>8.729404e+06</td>\n      <td>2.589276e+07</td>\n      <td>595100000.0</td>\n      <td>337.711661</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>0.000383</td>\n      <td>3.380034e+05</td>\n      <td>3.667668e+07</td>\n      <td>256100000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>0.001533</td>\n      <td>1.351392e+06</td>\n      <td>3.373806e+07</td>\n      <td>256100000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>0.000071</td>\n      <td>5.380723e+05</td>\n      <td>3.035153e+07</td>\n      <td>377300000.0</td>\n      <td>242.480268</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>0.001702</td>\n      <td>4.954473e+06</td>\n      <td>3.337712e+07</td>\n      <td>286800000.0</td>\n      <td>423.629399</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>0.002251</td>\n      <td>2.101707e+06</td>\n      <td>2.757823e+07</td>\n      <td>625800000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>0.000000</td>\n      <td>0.000000e+00</td>\n      <td>3.262330e+07</td>\n      <td>408000000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>0.016736</td>\n      <td>5.889036e+07</td>\n      <td>2.503721e+07</td>\n      <td>256100000.0</td>\n      <td>1656.429582</td>\n    </tr>\n    <tr>\n      <th>35</th>\n      <td>0.016367</td>\n      <td>1.848784e+08</td>\n      <td>0.000000e+00</td>\n      <td>256100000.0</td>\n      <td>10136.801233</td>\n    </tr>\n    <tr>\n      <th>36</th>\n      <td>0.000654</td>\n      <td>6.296517e+06</td>\n      <td>2.589276e+07</td>\n      <td>595100000.0</td>\n      <td>2640.705893</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>0.008218</td>\n      <td>7.610095e+06</td>\n      <td>2.677753e+07</td>\n      <td>377300000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>0.000589</td>\n      <td>5.380723e+05</td>\n      <td>2.949518e+07</td>\n      <td>408000000.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>0.000575</td>\n      <td>3.499283e+06</td>\n      <td>2.769255e+07</td>\n      <td>408000000.0</td>\n      <td>543.937399</td>\n    </tr>\n    <tr>\n      <th>40</th>\n      <td>0.000810</td>\n      <td>2.101707e+06</td>\n      <td>2.757823e+07</td>\n      <td>377300000.0</td>\n      <td>928.134987</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>0.003398</td>\n      <td>1.023737e+07</td>\n      <td>2.589276e+07</td>\n      <td>377300000.0</td>\n      <td>337.711661</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>0.005704</td>\n      <td>5.727839e+06</td>\n      <td>2.769255e+07</td>\n      <td>256100000.0</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-02T12:37:36.259324900Z",
+     "start_time": "2023-06-02T12:37:36.227961700Z"
     }
    }
   },
