--- a/Final Assignment EPA1361/2_MORO_ANALYSIS.ipynb
+++ b/Final Assignment EPA1361/2_MORO_ANALYSIS.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "#   import packages\n",
@@ -63,25 +63,26 @@
     "from dike_model_function import DikeNetwork  # @UnresolvedImport\n",
     "from problem_formulation import get_model_for_problem_formulation, sum_over, sum_over_time\n",
     "from ema_workbench.em_framework.samplers import sample_uncertainties\n",
-    "from ema_workbench.em_framework.optimization import ArchiveLogger, EpsilonProgress\n"
+    "from ema_workbench.em_framework.optimization import ArchiveLogger, EpsilonProgress\n",
+    "from ema_workbench.em_framework import parameters_from_csv\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T14:09:18.919584100Z",
-     "start_time": "2023-06-02T14:09:18.911387300Z"
+     "end_time": "2023-06-12T11:25:27.088077900Z",
+     "start_time": "2023-06-12T11:25:27.080008500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
       "text/plain": "odict_keys(['A.1_Expected Annual Damage', 'A.1_Dike Investment Costs', 'A.1_Expected Number of Deaths', 'A.2_Expected Annual Damage', 'A.2_Dike Investment Costs', 'A.2_Expected Number of Deaths', 'A.3_Expected Annual Damage', 'A.3_Dike Investment Costs', 'A.3_Expected Number of Deaths', 'A.4_Expected Annual Damage', 'A.4_Dike Investment Costs', 'A.4_Expected Number of Deaths', 'A.5_Expected Annual Damage', 'A.5_Dike Investment Costs', 'A.5_Expected Number of Deaths', 'RfR Total Costs', 'Expected Evacuation Costs'])"
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,33 +94,36 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T14:29:54.694189600Z",
-     "start_time": "2023-06-02T14:29:54.539856700Z"
+     "end_time": "2023-06-12T11:25:30.045982200Z",
+     "start_time": "2023-06-12T11:25:29.875369600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[MainProcess/INFO] pool started with 12 workers\n",
-      "2079it [43:15,  1.25s/it]                                                      \n",
-      "[MainProcess/INFO] optimization completed, found 43 solutions\n",
-      "[MainProcess/INFO] terminating pool\n"
-     ]
-    }
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(r'generated_datasets\\open_exploration_base_policy_worst_scenarios.pkl')\n",
+    "df.insert(0, 'name', df.index)\n",
+    "\n",
+    "dike_model.uncertainties = parameters_from_csv(df.iloc[:,:17])"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T11:27:39.181848300Z",
+     "start_time": "2023-06-12T11:27:39.151934500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
    "source": [
     "# set logging style for progression management\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
-    "\n",
-    "# choose problem formulation number, between 0-5\n",
-    "# each problem formulation has its own list of outcomes\n",
-    "dike_model, planning_steps = get_model_for_problem_formulation(5)\n",
     "\n",
     "# robustness metrics\n",
     "maximize = ScalarOutcome.MAXIMIZE\n",
@@ -153,8 +157,41 @@
     "# general input\n",
     "n_scenarios = 10\n",
     "scenarios = sample_uncertainties(dike_model, n_scenarios)\n",
-    "nfe = 2000 #make this large\n",
-    "\n",
+    "nfe = 20000 #make this large"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-12T11:32:08.780899100Z",
+     "start_time": "2023-06-12T11:32:08.777496500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started with 12 workers\n",
+      "[MainProcess/INFO] terminating pool\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "BaseEvaluator.robust_optimize() missing 1 required positional argument: 'scenarios'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[30], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# run model\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m MultiprocessingEvaluator(dike_model) \u001B[38;5;28;01mas\u001B[39;00m evaluator:\n\u001B[1;32m----> 3\u001B[0m     results \u001B[38;5;241m=\u001B[39m \u001B[43mevaluator\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrobust_optimize\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m      4\u001B[0m \u001B[43m        \u001B[49m\u001B[43mrobustness_functions\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m      5\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;66;43;03m#scenarios,\u001B[39;49;00m\n\u001B[0;32m      6\u001B[0m \u001B[43m        \u001B[49m\u001B[43mnfe\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mnfe\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m      7\u001B[0m \u001B[43m        \u001B[49m\u001B[43mepsilons\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0.1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;28;43mlen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mrobustness_functions\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m      8\u001B[0m \u001B[43m        \u001B[49m\u001B[43mpopulation_size\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m      9\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;66;03m# save to pickle file\u001B[39;00m\n\u001B[0;32m     12\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mrobust_optimize_results.pkl\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mwb\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m pickle_file:\n",
+      "\u001B[1;31mTypeError\u001B[0m: BaseEvaluator.robust_optimize() missing 1 required positional argument: 'scenarios'"
+     ]
+    }
+   ],
+   "source": [
     "# run model\n",
     "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
     "    results = evaluator.robust_optimize(\n",
@@ -172,8 +209,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T11:33:40.173667500Z",
-     "start_time": "2023-06-02T10:49:43.205191800Z"
+     "end_time": "2023-06-12T11:32:44.241007600Z",
+     "start_time": "2023-06-12T11:32:09.590994200Z"
     }
    }
   },
