--- a/Final Assignment EPA1361/1_BASECASE_OPEN_EXPLORATION.ipynb
+++ b/Final Assignment EPA1361/1_BASECASE_OPEN_EXPLORATION.ipynb
@@ -227,7 +227,7 @@
     "n_scenarios = 10_000\n",
     "\n",
     "# running the model through EMA workbench, using Latin Hypercube Sampling and the reference policy\n",
-    "with MultiprocessingEvaluator(dike_model, n_processes=-1) as evaluator:\n",
+    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
     "    experiments, outcomes = evaluator.perform_experiments(scenarios=n_scenarios, policies=reference, uncertainty_sampling=Samplers.LHS)"
    ],
    "metadata": {
